--- a/3 - Atividade Programação Modular e POO/index.html
+++ b/3 - Atividade Programação Modular e POO/index.html
@@ -6,6 +6,6 @@
     <title>Atividade Programação Modular e POO</title>
 </head>
 <body>
-    <script src="ContaBancaria.js"></script>
+    <script src="Lista4_14.js"></script>
 </body>
 </html>
